k8s/base/04-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: shop
  labels:
    app: admin
    tier: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
      tier: admin
  template:
    metadata:
      labels:
        app: admin
        tier: admin
    spec:
      containers:
        - name: admin
          image: ghcr.io/sajin-varghese1990/shop-admin:pending-first-build
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /admin/health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /admin/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
