k8s/base/02-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: shop
  labels:
    app: frontend
    tier: web
spec:
  type: NodePort
  selector:
    app: frontend
    tier: web
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
