k8s/base/05-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: shop
  labels:
    app: admin
    tier: admin
spec:
  type: ClusterIP
  selector:
    app: admin
    tier: admin
  ports:
    - name: http
      port: 80
      targetPort: http
