k8s/base/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: shop
  labels:
    app.kubernetes.io/part-of: shop
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shop.local
      secretName: shop-local-tls-certificate
  rules:
    - host: shop.local
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
